        - make use of info_schema on MySQL 5
        - always display db stats for MySQL 5
      - fixed html output
      - replaced " with ' in some queries
    * tbl_properties_structure.php, tbl_properties_common.php
      tbl_properties_links.php:
      - no drop, empty, operation, insert, import for information_schema tables
      - enabled export for views
    
2005-11-04 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/spanish: Updated, thanks to Daniel Hinostroza (hinostroza)

2005-11-04 Michal Čihař  <michal@cihar.com>
    * db_details_structure.php: Read InnoDB exact count before rendering icons
      for truncating (bug #1337744).
    
2005-11-04 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * db_details_structure.php:
      fixed display of stats for InnoDB and information_schema
    * main.php:
      - bug #1348089 SQL and actions bellow should be same width
      - removed nowrap, vertical srcolling is really annoying
    * main.php, libraries/check_user_privileges.lib.php:
      - bug #1348189 after droping db some links in main.php are missing
    * header.inc.php, libraries/common.lib.php:
      - added class icon to img-tags
    * libraries/header_meta_style.inc.php:
      fixed position of link meta tag
    * libraries/select_server.lib.php
      fixed html output
      
2005-11-03 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php, tbl_replace.php, tbl_replace_fields.php:
      bug #1339184, problems in strict mode inserting auto-increment fields
    * libraries/header_meta_style.inc.php: favicon on login panel
    * lang/japanese: Update, thanks to Tadashi Jokagi - elf2000.

2005-11-03 Michal Čihař  <michal@cihar.com>
    * libraries/common.lib.php: Incorrect message for validate links (bug
      #1346608).

2005-11-03 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * themes/dakrblue_orange/theme_right.css.php, css/phpmyadmin.css.php:
      fixed different font sizes
    * footer.inc.php, libraries/dbg/*: