@@ -22,6 +22,8 @@ $Source$
       tbl_properties_links.php:
       - no drop, empty, operation, insert, import for information_schema tables
       - enabled export for views
+    * db_details_common.php, db_details_structure.php, db_details_links.php:
+      - no import, drop, rights, operation for information_schema
     
 2005-11-04 Marc Delisle  <lem9@users.sourceforge.net>
     * lang/spanish: Updated, thanks to Daniel Hinostroza (hinostroza)
